7527
Yep.
```scala

scala> class G(y: Int) {
     |     def apply(x: Int) = 1
     |   }
defined class G

scala> new G(0)(0)
res0: Int = 1

scala> new G(0)(0) {}
<console>:9: error: too many argument lists for constructor invocation
              new G(0)(0) {}
                  ^
```
